@@ -15,6 +15,7 @@ David Dokoupil
 David Müller
 Dávid Smolka
 Edmond Irani Liu
+Emmanuel Filiot
 Ernesto Posse
 Étienne Renault
 Fabrice Kordon
